<resources>
    <string name="app_name">LaundryWala</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="WebClientIDForGoogleSignIn">458204751165-tjls7ldk5jh6dgiucmvabaqbelqa3nfc.apps.googleusercontent.com</string>
    <string name="Api_Key">AIzaSyDW84TkYVNVnBQQ5SPbYm5kkmk_RNQb1y8</string>
    <string name="PayPal_ClientID">AcUFKfY0Zx38SI7yvmoxbf3UaapoFq_5fbnj-28dJ-x2JpySEAphEbHkjhP-TF6so2b8gN8JmdDRprE0</string>
    <string name="e_mail">E-mail</string>
    <string name="select_user_type">SELECT USER TYPE</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="send_password_reset_link">Send Password Reset Link</string>
    <string name="address">Address</string>
    <string name="laundryhouse">Laundry House</string>
    <string name="customer">Customer</string>
    <string name="courier">Courier</string>
    <string name="area">Area</string>
    <string name="paysera_id">PaySera ID</string>
    <string name="upi_id">UPI ID</string>
    <string name="have_an_account_log_in">Have an account? Log In.</string>
    <string name="shirts">Shirts</string>
    <string name="shirts_any">0.1€-Any Shirts</string>
    <string name="bedsheets_duvets">0.5€-Bedsheets/Duvets</string>
    <string name="carpets_rugs">5€-Carpets/Rugs</string>
    <string name="suits_blazers_coats">1€-Suits/Blazers/Coats</string>
    <string name="pants_any">0.1€-Any Pants</string>
    <string name="jackets_woolens">1€-Jackets/Woolens</string>
    <string name="items">Items</string>
    <string name="_0">0</string>
    <string name="order_summary">Order Summary and Cost are shown below -</string>
    <string name="laundry_basket">Laundry Basket</string>
    <string name="failed_try_again">Failed, try again.</string>
    <string name="switch_to_go_offline">Switch to go Offline</string>
    <string name="switch_to_go_online">Switch to go Online</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <integer name="Login">100</integer>
    <integer name="Signup">101</integer>
    <integer name="LOCATION_SERVICE_ID">786</integer>
    <string name="ACTION_START_LOCATION_SERVICE">Start Location Service</string>
    <string name="ACTION_STOP_LOCATION_SERVICE">Stop Location Service</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="order_history">Order History</string>
    <string name="googlepay_status_unavailable">Unfortunately, Google Pay is not available on this device.</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="gateway_replace_name_example">"Gateway name set to \"example\" - please modify Constants.java and replace it with your own gateway."</string>
    <string name="checkout_item_description">Description</string>
    <string name="googlepay_button_content_description">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>
    <string name="item_name">Item Name</string>
    <string name="item_cost">Item Cost</string>
    <string name="logout">Logout</string>
    <string name="order_status">Order Status</string>
    <string name="order_time">Order Time</string>
    <string name="order_cost">Order Cost</string>
    <string name="order_id">Order ID</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="arealaundryhouseadapter">Area -</string>
    <string name="active">Active</string>
    <string name="save">Save</string>
    <string name="select_payment_option">SELECT PAYMENT OPTION</string>
    <string name="confirm_and_pay">Confirm and pay</string>
    <string name="CloudMessagingServerKey">AAAAaq8hpT0:APA91bGKqTKAGgbRAVO1_R34M3UkreGzwgEwNQxZ-xUg0DPURspqSWvr-ExRvyLTbtnUWGW7lm2tsFiEUn88L9GWC2PopHG86kiCKqg_lvR0EZQ3YDotiaFmsyIAbtg1WI4IE7yc6GB7</string>
    <string name="confirm">Confirm</string>
    <string name="change">Change</string>
    <string name="datetime">DateTime</string>
    <string name="assign">Assign</string>
    <string name="change_status">Change Status</string>
    <string name="order_cost_">Order Cost -</string>
    <string name="select_status_to_change">Select status to change to</string>
    <string name="add_clothes_in_kgs_0_5_kg">Add Clothes In Kgs(0.5€/KG)</string>
    <string name="i_need_a_courier">I need a Courier</string>
    <string name="i_need_drying">I need Drying</string>
    <string name="welcome_to_laundrywala">Welcome to LaundryWala</string>
    <string name="clear_all">Clear All</string>
    <string name="isordertracking">isOrderTracking</string>
    <string name="view_items">View Items</string>
    <string-array name="Authentication_type">
        <item>SELECT USER TYPE</item>
        <item>Customer</item>
        <item>Laundry House</item>
        <item>Courier</item>
    </string-array>
    <string-array name="Order_Status_Courier">
        <item>Select Order Status</item>
        <item>Pick Up Phase</item>
        <item>Customer did not Show, assign new Courier</item>
        <item>Customer did not Show to collect order</item>
        <item>Delivery Phase</item>
    </string-array>
    <string-array name="Order_Status_LaundryHouse">
        <item>Select Order Status</item>
        <item>Order Assigned to Courier</item>
        <item>Order Not Assigned to Courier</item>
        <item>Order in Process</item>
        <item>Awaiting pick up from Courier</item>
        <item>Awaiting pick up from Customer</item>
        <item>Order Was Delivered to Laundry House</item>
        <item>Order Was Not Delivered to Laundry House</item>
        <item>Order Was Picked Up From Laundry House</item>
        <item>Order Was Not Picked Up From Laundry House</item>
    </string-array>
</resources>