<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.example.laundry2.AuthenticationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_signup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btn_googlesignin_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_signup"
            app:layout_constraintHorizontal_bias="0.484"
            app:layout_constraintStart_toStartOf="@+id/btn_signup"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup"
            app:layout_constraintVertical_bias="0.095" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_signup"
            app:layout_constraintVertical_bias="0.128" />

        <EditText
            android:id="@+id/edtxt_email_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/laundryhouseadapterbackground"
            android:ems="10"
            android:hint="@string/e_mail"
            android:importantForAutofill="no"
            android:inputType="none|textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052" />

        <EditText
            android:id="@+id/edtxt_password_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/laundryhouseadapterbackground"
            android:ems="10"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtxt_email_signup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtxt_email_signup"
            app:layout_constraintTop_toBottomOf="@+id/edtxt_email_signup"
            app:layout_constraintVertical_bias="0.056" />

        <EditText
            android:id="@+id/edtxt_confirm_password_signup"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/laundryhouseadapterbackground"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/purple_500"
            android:textColorHint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/edtxt_email_signup"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edtxt_email_signup"
            app:layout_constraintTop_toBottomOf="@+id/edtxt_password_signup"
            app:layout_constraintVertical_bias="0.06" />

        <TextView
            android:id="@+id/txt_gotologinfromsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account_log_in"
            android:textColor="#651FFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_googlesignin_signup"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="@+id/btn_googlesignin_signup"
            app:layout_constraintTop_toBottomOf="@+id/btn_googlesignin_signup"
            app:layout_constraintVertical_bias="0.201" />

        <Spinner
            android:id="@+id/spinner_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/select_user_type"
            android:minHeight="48dp"
            android:prompt="@string/select_user_type"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtxt_confirm_password_signup"
            app:layout_constraintVertical_bias="0.083" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>