<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="377dp"
        android:layout_height="146dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/order_id"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_card_orderhistory_ordercost"
                android:layout_width="237dp"
                android:layout_height="27dp"
                android:text=""
                android:textColor="#350707"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView18"
                app:layout_constraintEnd_toEndOf="@+id/textView_card_orderhistory_orderid"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_card_orderhistory_orderid"
                app:layout_constraintTop_toTopOf="@+id/textView18" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:text="@string/order_status"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView18"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView18"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/order_time"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView18"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView23" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/order_cost"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView21"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView21"
                app:layout_constraintTop_toBottomOf="@+id/textView21"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_card_orderhistory_orderid"
                android:layout_width="247dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text=""
                android:textColor="#350707"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView21"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView23"
                app:layout_constraintTop_toTopOf="@+id/textView21"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView_card_orderhistory_ordertime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#350707"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView24"
                app:layout_constraintEnd_toEndOf="@+id/textView_card_orderhistory_orderstatus"
                app:layout_constraintStart_toStartOf="@+id/textView_card_orderhistory_orderstatus"
                app:layout_constraintTop_toTopOf="@+id/textView24" />

            <TextView
                android:id="@+id/textView_card_orderhistory_orderstatus"
                android:layout_width="237dp"
                android:layout_height="28dp"
                android:text=""
                android:textColor="#350707"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView23"
                app:layout_constraintEnd_toEndOf="@+id/textView_card_orderhistory_ordercost"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textView_card_orderhistory_ordercost"
                app:layout_constraintTop_toTopOf="@+id/textView23" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>